nav bug Z-index fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,17 +122,16 @@ li {
 
     .toggle .line1{ 
         transform: rotate(-45deg) translate(-5px, 6px);
-        z-index : 1001;
     }
 
     .toggle .line2{ 
         opacity: 0;
-        z-index : 1001;
+
     }
 
     .toggle .line3{ 
         transform: rotate(45deg) translate(-5px, 6px);
-        z-index : 1001;
+
         
     }
 /*---------------------------Land page and hero image*/
@@ -140,7 +139,6 @@ li {
 .box {
     width: 100%;
     height: 100%;
-    z-index : 1001;
   }
   
   img {
@@ -150,7 +148,6 @@ li {
   }
   
   #hero-outer{
-
     height:600px;
     width: 100%;
     overflow: hidden;
@@ -158,17 +155,6 @@ li {
   
     
 }
-
-
-@keyframes hero-zoom {
-    from{
-        transform: scale(1);
-    }
-    to{
-        transform: scale(1.1);
-    }
-}
-
 
 #cover-text {
     color: rgb(255, 255, 255);
@@ -190,29 +176,33 @@ li {
     margin-left: 40px;
 }
 
-.button-hero{
-
+.button-hero {
     margin-left: 40px;
 
 }
   
-@media screen and (max-width:1025px) { 
-    .cover-text{
-        margin-right: 90px;
-    
-    }
-}
 
-@@media screen and (max-width:768px) { 
-    .cover-text{
-        margin-right: 200px;
-    
-    }
-}
-
-
-
-.slider-wrap{
+.slider-wrap {
     position: relative;
+}
 
+.slider-main {
+    position: absolute;
+}
+
+.item { 
+    width : 200px;
+    display : inline-block;
+    background: chocolate;
+    position: relative;
+}
+
+.text { 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+    color:cornsilk;
+    font-weight: 100;
 }
